# ITKPyTorch

./: CMakeLists.txt  README.md  README.rst  itk-module.cmake  setup.py
.github/workflows/: build-test-package.yml
include/: PyTorchExport.h  itkImageToTorchImageFilter.h  itkImageToTorchImageFilterSave.hxx  itkMinimalStandardRandomVariateGenerator.h  itkPyTorchDataManager.h  itkPyTorchImage.h  itkPyTorchImage.hxx  itkPyTorchImageDataManager.h  itkPyTorchImageDataManager.hxx  itkPyTorchImageToImageFilter.h  itkPyTorchImageToImageFilter.hxx  itkTorchDataManager.h  itkTorchImage.h  itkTorchImage.hxx  itkTorchImageDataManager.h  itkTorchImageDataManager.hxx  itkTorchImageToImageFilter.h  itkTorchImageToImageFilter.hxx  itkTorchImageToImageFilterSave.hxx  itkTorchImageToTorchImageFilter.h  itkTorchPixelHelper.h  itkTorchPixelHelper.hxx  itkTorchTensorAccessorHelper.h  itkUniformTorchTensorAccessor.h  itkUniformTorchTensorAccessorHelper.h
src/: CMakeLists.txt  itkPyTorchDataManager.cxx  itkTorchDataManager.cxx
test/: CMakeLists.txt  itkImageToTorchImageFilterTestSave.cxx  itkPyTorchImageTest.cxx  itkPyTorchImageToImageFilterTest.cxx  itkTorchImageTest.cxx  itkTorchImageToImageFilterTest.cxx  itkTorchImageToTorchImageFilterTest.cxx
test/Baseline/: itkImageToTorchImageFilterTestOutput.png.sha512
wrapping/: CMakeLists.txt  itkImageToTorchImageFilter.wrap  itkPyTorchImageToImageFilter.wrap  itkTorchImage.wrap  itkTorchImageToImageFilter.wrap  itkTorchImageToTorchImageFilter.wrap  itkTorchPixelHelper.wrap  itkTorchTensorAccessorHelper.wrap
